--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <ul class="nav">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#work">Projects</a></li>
-                <li><a href="http://dianpan.github.io/blog/">Blog</a></li>
-                <li><a href="http://dianpan.github.io/blog/">Resume</a></li>
+                <li><a href="#project">Projects</a></li>
+                <li><a href="http://dianpan.github.io/blog/" target="_blank">Blog</a></li>
+                <li><a href="https://resume.creddle.io/resume/i9083pnrrl3" target="_blank">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </header>
@@ -35,7 +35,7 @@
                 <div class="col home-title jiji">
                     <h1>Dian Pan</h1>
                     <h2>Full Stack Developer</h2>
-                    <a href="https://resume.creddle.io/resume/i9083pnrrl3" target="_blank" class="but">My Resume</a>
+                    <!-- <a href="https://resume.creddle.io/resume/i9083pnrrl3" target="_blank" class="but">My Resume</a> -->
                 </div>
             </div>
         </section>
@@ -60,9 +60,9 @@
             </div>
         </section>
 
-        <section id="services" class="row">
-            <div class="services-content page">
-                <div class="col services-design"
+        <section id="skills" class="row">
+            <div class="skills-content page">
+                <div class="col skills-design"
                     data-600="-webkit-transform: translateY(10px); opacity:0;"
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
@@ -74,7 +74,7 @@
                         <li>SQL</li>
                     </ul>
                 </div>
-                <div class="col services-frontend"
+                <div class="col skills-frontend"
                     data-600="-webkit-transform: translateY(50px); opacity:0;"
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
@@ -86,7 +86,7 @@
                         <li>Foundation</li>
                     </ul>
                 </div>
-                <div class="col services-team"
+                <div class="col skills-team"
                     data-600="-webkit-transform: translateY(100px); opacity:0;"
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
@@ -105,16 +105,16 @@
 
         <hr>
 
-        <section id="work" class="row">
-            <div class="work-content page">
-                <div class="col work-title">
+        <section id="project" class="row">
+            <div class="project-content page">
+                <div class="col project-title">
                     <h3
                         data-900="-webkit-transform: translateX(-100px); opacity:0;"
                         data-1300="-webkit-transform: translateX(0px); opacity:1;"
                     >Projects</h3>
                 </div>
                 <div class="col empty">&nbsp;</div>
-                <div class="col work-description">
+                <div class="col project-description">
                     <p
                         data-900="opacity:0;"
                         data-1300="opacity:1;"
@@ -122,14 +122,14 @@
                 </div>
                 <div class="col empty">&nbsp;</div>
             </div>
-            <div class="work-examples page">
-                <div class="col work-item"
+            <div class="project-examples page">
+                <div class="col project-item"
                     data-1300="opacity:0;"
                     data-1400="opacity:1;"
                 >
-                    <img src="imgs/caniaffordthis-homepage.png" alt="">
-                    <div class="work-item-inside">
-                        <div class="work-item-inside-content">
+                    <img src="imgs/caniaffordthis-homepage.png" alt="Can I Afford This">
+                    <div class="project-item-inside">
+                        <div class="project-item-inside-content">
                             <h4>Can I Afford This</h4>
                             <p><a href="https://github.com/dianpan/Can-I-Afford-This" class="">Github</a></p>
                             <br>
@@ -138,13 +138,13 @@
                     </div>
                 </div>
 
-<!--                 <div class="col work-item"
+<!--                 <div class="col project-item"
                     data-1300="opacity:0;"
                     data-1600="opacity:1;"
                 >
                     <img src="imgs/caniaffordthis-homepage.png" alt="">
-                    <div class="work-item-inside">
-                        <div class="work-item-inside-content">
+                    <div class="project-item-inside">
+                        <div class="project-item-inside-content">
                             <h4>Taster&Co</h4>
                             <p class="off">Not available</p>
                         </div>
