update project layout

--- a/index.html
+++ b/index.html
@@ -127,16 +127,11 @@
                     data-1300="opacity:0;"
                     data-1400="opacity:1;"
                 >
+                    <h4>Can I Afford This</h4>
+                    <p><a href="https://github.com/dianpan/Can-I-Afford-This" target="_none">Github</a> | <a href="http://caniaffordthis.herokuapp.com/" target="_none">Site</a></p>
                     <img src="imgs/caniaffordthis-homepage.png" alt="Can I Afford This">
-                    <div class="project-item-inside">
-                        <div class="project-item-inside-content">
-                            <h4>Can I Afford This</h4>
-                            <p><a href="https://github.com/dianpan/Can-I-Afford-This" class="">Github</a></p>
-                            <br>
-                            <a href="http://caniaffordthis.herokuapp.com/" class="but">Visit</a>
-                        </div>
-                    </div>
                 </div>
+
 
 <!--                 <div class="col project-item"
                     data-1300="opacity:0;"
@@ -145,8 +140,7 @@
                     <img src="imgs/caniaffordthis-homepage.png" alt="">
                     <div class="project-item-inside">
                         <div class="project-item-inside-content">
-                            <h4>Taster&Co</h4>
-                            <p class="off">Not available</p>
+                            <h4>Test</h4>
                         </div>
                     </div>
                 </div> -->
