remove old files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,700'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -179,8 +180,7 @@
     </div>
 
     <div class="loader"></div>
-    <script src="js/jquery-1.11.0.min.js"></script>
-    <script src="js/modernizr-2.6.2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/skrollr.js"></script>
     <script src="js/main.js"></script>
 
