--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <title>Dian Pan</title>
     <meta name="description" content="Dian Pan, Full Stack Developer">
     <link rel="shortcut icon" href="imgs/favicon.ico">
-
-    <!-- Mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,700'>
 </head>
 <body>
     <div class="wrapper">
-        <!-- start header   -->
+
         <header class="main-header">
             <ul class="nav">
                 <li><a href="#home">Home</a></li>
@@ -25,14 +22,12 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </header>
-        <!-- end header -->
 
         <section id="home" class="row">
             <div class="overlay">
                 <div class="col home-title jiji">
                     <h1>Dian Pan</h1>
                     <h2>Full Stack Developer</h2>
-                    <!-- <a href="https://resume.creddle.io/resume/i9083pnrrl3" target="_blank" class="but">My Resume</a> -->
                 </div>
             </div>
         </section>
@@ -59,7 +54,7 @@
 
         <section id="skills" class="row">
             <div class="skills-content page">
-                <div class="col skills-design"
+                <div class="col skills-languages"
                     data-600="-webkit-transform: translateY(10px); opacity:0;"
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
@@ -71,7 +66,7 @@
                         <li>SQL</li>
                     </ul>
                 </div>
-                <div class="col skills-frontend"
+                <div class="col skills-frameworks"
                     data-600="-webkit-transform: translateY(50px); opacity:0;"
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
@@ -83,7 +78,7 @@
                         <li>Foundation</li>
                     </ul>
                 </div>
-                <div class="col skills-team"
+                <div class="col skills-concepts"
                     data-600="-webkit-transform: translateY(100px); opacity:0;"
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
