add piqueit video

--- a/index.html
+++ b/index.html
@@ -120,22 +120,20 @@
                     data-1400="opacity:1;"
                 >
                     <h4>Can I Afford This</h4>
+                    <p>data visualization tool for personal finance</p>
                     <p><a href="https://github.com/dianpan/Can-I-Afford-This" target="_none">Github</a> | <a href="http://caniaffordthis.herokuapp.com/" target="_none">Site</a></p>
                     <img src="imgs/caniaffordthis-homepage.png" alt="Can I Afford This">
                 </div>
 
-
-<!--                 <div class="col project-item"
+                <div class="col project-item"
                     data-1300="opacity:0;"
-                    data-1600="opacity:1;"
+                    data-1400="opacity:1;"
                 >
-                    <img src="imgs/caniaffordthis-homepage.png" alt="">
-                    <div class="project-item-inside">
-                        <div class="project-item-inside-content">
-                            <h4>Test</h4>
-                        </div>
-                    </div>
-                </div> -->
+                    <h4>Pique.it</h4>
+                    <p>A travel search inspiration app made for the Emirates Hackathon
+                    <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a> | <a href="http://caniaffordthis.herokuapp.com/" target="_none">Site</a></p>
+                    <video controls="controls" name="Pique.it" src="imgs/pique_demo.mov"></video>
+                </div>
 
             </div>
         </section>
@@ -148,7 +146,7 @@
                     <h3
                         data-100="-webkit-transform: translateX(100px); opacity:0;"
                         data-500="-webkit-transform: translateX(0px); opacity:1;"
-                    >Get in touch</h3>
+                    >Contact</h3>
                 </div>
                 <div class="col empty">&nbsp;</div>
                 <div class="col contact-description">
@@ -166,7 +164,7 @@
         <footer id="footer" class="row">
             <div class="footer-content page">
                 <div class="col f1">
-                    <p>© 2015 Dian Pan</p>
+                    <p>Copyright © 2015</p>
                 </div>
             </div>
         </footer>
