--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                     data-1400="opacity:1;"
                 >
                     <h4>Pique.it</h4>
-                    <p>A travel search inspiration app made for the Emirates Hackathon
-                    <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a> | <a href="http://caniaffordthis.herokuapp.com/" target="_none">Site</a></p>
-                    <video controls="controls" name="Pique.it" src="imgs/pique_demo.mov"></video>
+                    <p>A travel search inspiration app made for the 2015 Emirates Hackathon
+                    <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a></p>
+                    <img src="imgs/piqueit.png" alt="travel inspiration">
                 </div>
 
             </div>
