--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                         <li>Frameworks</li>
                         <li>Ruby on Rails</li>
                         <li>Sinatra</li>
-                        <li>Sass</li>
                         <li>Foundation</li>
+                        <li>Capybara</li>
                     </ul>
                 </div>
                 <div class="col skills-concepts"
@@ -88,8 +88,6 @@
                         <li>REST</li>
                         <li>TDD</li>
                         <li>Continuous Integration</li>
-                        <li>RSpec</li>
-                        <li>Capybara</li>
                     </ul>
                 </div>
             </div>
@@ -106,12 +104,12 @@
                     >Projects</h3>
                 </div>
                 <div class="col empty">&nbsp;</div>
-                <div class="col project-description">
+<!--                 <div class="col project-description">
                     <p
                         data-900="opacity:0;"
                         data-1300="opacity:1;"
                     >My recent projects</p>
-                </div>
+                </div> -->
                 <div class="col empty">&nbsp;</div>
             </div>
             <div class="project-examples page">
@@ -123,6 +121,16 @@
                     <p>data visualization tool for personal finance</p>
                     <p><a href="https://github.com/dianpan/Can-I-Afford-This" target="_none">Github</a> | <a href="http://caniaffordthis.herokuapp.com/" target="_none">Site</a></p>
                     <img src="imgs/caniaffordthis-homepage.png" alt="Can I Afford This">
+                </div>
+
+                <div class="col project-item"
+                    data-1300="opacity:0;"
+                    data-1400="opacity:1;"
+                >
+                    <h4>Pique.it</h4>
+                    <p>A travel search inspiration app made for the 2015 Emirates Hackathon
+                    <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a></p>
+                    <img src="imgs/piqueit.png" alt="travel inspiration">
                 </div>
 
                 <div class="col project-item"
