--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#project">Projects</a></li>
                 <li><a href="http://dianpan.github.io/blog/" target="_blank">Blog</a></li>
-                <li><a href="https://resume.creddle.io/resume/i9083pnrrl3" target="_blank">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </header>
@@ -46,7 +45,7 @@
                         data-100="opacity:0;"
                         data-500="opacity:1;"
                     >Curious, creative, life-long learner. 3 months ago, I quit my job to pursue coding full time and I haven't looked back since. Check out my <a href="http://dianpan.github.io/blog/">blog</a> to see how I transitioned from marketing to full stack developement.</p>
-                    <a href="mailto:dian.di.pan@gmail.com" class="but">Say hello</a>
+                    <a href="https://resume.creddle.io/resume/i9083pnrrl3" class="but">My Resume</a>
                 </div>
                 <div class="col empty">&nbsp;</div>
             </div>
