--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
                         <li>Frameworks</li>
                         <li>Ruby on Rails</li>
                         <li>Sinatra</li>
-                        <li>Foundation</li>
                         <li>Capybara</li>
+                        <li>Foundation</li>
+
                     </ul>
                 </div>
                 <div class="col skills-concepts"
@@ -127,7 +128,7 @@
                     data-1400="opacity:1;"
                 >
                     <h4>Pique.it</h4>
-                    <p>A travel search inspiration app made for the 2015 Emirates Hackathon
+                    <p>travel search inspiration app made for the 2015 Emirates Hackathon
                     <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a></p>
                     <img src="imgs/piqueit.png" alt="travel inspiration">
                 </div>
@@ -137,7 +138,7 @@
                     data-1400="opacity:1;"
                 >
                     <h4>Pique.it</h4>
-                    <p>A travel search inspiration app made for the 2015 Emirates Hackathon
+                    <p>travel search inspiration app made for the 2015 Emirates Hackathon
                     <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a></p>
                     <img src="imgs/piqueit.png" alt="travel inspiration">
                 </div>
