minor code cleanup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <div class="wrapper">
-
         <header class="main-header">
             <ul class="nav">
                 <li><a href="#home">Home</a></li>
@@ -44,8 +43,8 @@
                     <p
                         data-100="opacity:0;"
                         data-500="opacity:1;"
-                    >Curious, creative, life-long learner. 3 months ago, I quit my job to pursue coding full time and I haven't looked back since. Check out my <a href="http://dianpan.github.io/blog/">blog</a> to see how I transitioned from marketing to full stack developement.</p>
-                    <a href="https://resume.creddle.io/resume/i9083pnrrl3" class="but">My Resume</a>
+                    >Curious, creative, life-long learner. 3 months ago, I quit my job in marketing to pursue coding full time and I haven't looked back since. Check out my <a href="http://dianpan.github.io/blog/">blog</a> to see how I transitioned from marketing to full stack developement.</p>
+                    <a href="https://resume.creddle.io/resume/i9083pnrrl3" class="but" target="_blank">My Resume</a>
                 </div>
                 <div class="col empty">&nbsp;</div>
             </div>
@@ -75,7 +74,6 @@
                         <li>Sinatra</li>
                         <li>Capybara</li>
                         <li>Foundation</li>
-
                     </ul>
                 </div>
                 <div class="col skills-concepts"
@@ -83,7 +81,7 @@
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
                     <ul>
-                        <li>Concepts/Testing</li>
+                        <li>Concepts</li>
                         <li>Object Oriented Programming</li>
                         <li>REST</li>
                         <li>TDD</li>
@@ -104,12 +102,6 @@
                     >Projects</h3>
                 </div>
                 <div class="col empty">&nbsp;</div>
-<!--                 <div class="col project-description">
-                    <p
-                        data-900="opacity:0;"
-                        data-1300="opacity:1;"
-                    >My recent projects</p>
-                </div> -->
                 <div class="col empty">&nbsp;</div>
             </div>
             <div class="project-examples page">
@@ -123,7 +115,7 @@
                     <img src="imgs/caniaffordthis-homepage.png" alt="Can I Afford This">
                 </div>
 
-                <div class="col project-item"
+<!--                 <div class="col project-item"
                     data-1300="opacity:0;"
                     data-1400="opacity:1;"
                 >
@@ -131,7 +123,7 @@
                     <p>travel search inspiration app made for the 2015 Emirates Hackathon
                     <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a></p>
                     <img src="imgs/piqueit.png" alt="travel inspiration">
-                </div>
+                </div> -->
 
                 <div class="col project-item"
                     data-1300="opacity:0;"
