update new project page

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <h4>Dev Connect</h4>
                     <p>subscription based site where users can connect to a community of investors, entrepreneurs and developers</p>
                     <p><a href="https://github.com/dianpan/dev-connect" target="_none">Github</a> | <a href="http://dev-connections.herokuapp.com" target="_none">Site</a></p>
-                    <img src="imgs/piqueit.png" alt="make connections">
+                    <img src="imgs/dev-connect.png" alt="make connections">
                 </div>
 
             </div>
