--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h4>Can I Afford This</h4>
                     <p>data visualization tool for personal finance</p>
                     <p><a href="https://github.com/dianpan/Can-I-Afford-This" target="_none">Github</a> | <a href="http://caniaffordthis.herokuapp.com/" target="_none">Site</a></p>
-                    <img src="imgs/caniaffordthis-homepage.png" alt="Can I Afford This">
+                    <a href="http://caniaffordthis.herokuapp.com/" target="_none"><img src="imgs/caniaffordthis-homepage.png" alt="Can I Afford This"></a>
                 </div>
 
                 <div class="col project-item"
@@ -122,7 +122,7 @@
                     <h4>Pique.it</h4>
                     <p>travel search inspiration app made for the 2015 Emirates Hackathon</p>
                     <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a></p>
-                    <img src="imgs/piqueit.png" alt="travel inspiration">
+                    <a href="https://github.com/piqueit/piqueit" target="_none"><img src="imgs/piqueit.png" alt="travel inspiration"></a>
                 </div>
 
                 <div class="col project-item"
@@ -132,7 +132,7 @@
                     <h4>Dev Connect</h4>
                     <p>subscription based site where users can connect to a community of investors, entrepreneurs and developers</p>
                     <p><a href="https://github.com/dianpan/dev-connect" target="_none">Github</a> | <a href="http://dev-connections.herokuapp.com" target="_none">Site</a></p>
-                    <img src="imgs/dev-connect.png" alt="make connections">
+                    <a href="http://dev-connections.herokuapp.com" target="_none"><img src="imgs/dev-connect.png" alt="make connections"></a>
                 </div>
 
             </div>
