add live site for piqueit project

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 >
                     <h4>Pique.it</h4>
                     <p>travel search inspiration app made for the 2015 Emirates Hackathon</p>
-                    <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a></p>
-                    <a href="https://github.com/piqueit/piqueit" target="_none"><img src="imgs/piqueit.png" alt="travel inspiration"></a>
+                    <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a>| <a href="http://piqueit.herokuapp.com" target="_none">Site</a></p>
+                    <a href="http://piqueit.herokuapp.com" target="_none"><img src="imgs/piqueit.png" alt="travel inspiration"></a>
                 </div>
 
                 <div class="col project-item"
