--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p
                         data-100="opacity:0;"
                         data-500="opacity:1;"
-                    >Curious, creative, passionate about creating beautiful user experiences. Check out my <a href="http://dianpan.github.io/blog/">blog</a> to see how I transitioned from marketing to full stack developement.</p>
+                    >Curious, creative, passionate about creating beautiful user experiences. Check out my <a href="http://dianpan.github.io/blog/">blog</a> to see how I transitioned from marketing to full stack development.</p>
                     <a href="https://resume.creddle.io/resume/i9083pnrrl3" class="but" target="_blank">My Resume</a>
                 </div>
                 <div class="col empty">&nbsp;</div>
