update sweet tooth img

--- a/index.html
+++ b/index.html
@@ -136,33 +136,24 @@
                 </div>
 
             </div>
-        </section>
 
-        <section id="project" class="row">
-            <div class="project-content page">
-                <div class="col project-title">
-
-                </div>
-                <div class="col empty">&nbsp;</div>
-                <div class="col empty">&nbsp;</div>
-            </div>
             <div class="project-examples page">
                 <div class="col project-item"
                     data-1300="opacity:0;"
                     data-1400="opacity:1;"
                 >
                     <h4>Sweet Tooth</h4>
-                    <p>Geolocates your location and shows you all of the ice cream spots within a half mile radius</p>
+                    <p>Find all of the ice cream spots within a half mile radius of your location.</p>
                     <p><a href="https://github.com/dianpan/sweet-tooth" target="_none">Github</a> | <a href="http://sweet-tooth.herokuapp.com/" target="_none">Site</a></p>
-                    <a href="http://sweet-tooth.herokuapp.com/" target="_none"><img src="imgs/st_map_view.png" alt="Sweet Tooth"></a>
+                    <a href="http://sweet-tooth.herokuapp.com/" target="_none"><img src="imgs/sweet_tooth_map.png" alt="Sweet Tooth"></a>
                 </div>
 
                 <div class="col project-item"
                     data-1300="opacity:0;"
                     data-1400="opacity:1;"
                 >
-                    <h4>Pique.it</h4>
-                    <p>travel search inspiration app made for the 2015 Emirates Hackathon</p>
+                    <h4>Dev Profiler</h4>
+                    <p>A single page app to search for and see anyone's Github profile and repos.</p>
                     <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a>| <a href="http://piqueit.herokuapp.com" target="_none">Site</a></p>
                     <a href="http://piqueit.herokuapp.com" target="_none"><img src="imgs/piqueit.png" alt="travel inspiration"></a>
                 </div>
