add dev profiler project

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                 >
                     <h4>Dev Profiler</h4>
                     <p>A single page app to search for and see anyone's Github profile and repos.</p>
-                    <p><a href="https://github.com/piqueit/piqueit" target="_none">Github</a>| <a href="http://piqueit.herokuapp.com" target="_none">Site</a></p>
-                    <a href="http://piqueit.herokuapp.com" target="_none"><img src="imgs/piqueit.png" alt="travel inspiration"></a>
+                    <p><a href="https://github.com/dianpan/dev_profiler" target="_none">Github</a></p>
+                    <a href="https://github.com/dianpan/dev_profiler" target="_none"><img src="imgs/dev_profiler.png" alt="github profiles"></a>
                 </div>
 
             </div>
